--- a/index.mdx
+++ b/index.mdx
@@ -9,7 +9,7 @@ description: "Transform any document into structured data"
 Cardinal's core API endpoints for document processing and data extraction:
 
 <CardGroup cols={3}>
-  <Card title="Partition" icon="scissors" href="/partition">
+  <Card title="Partition" icon="scissors" href="/classify-split">
     Partition documents into custom sections and separate multi-page files
   </Card>
   <Card title="Schema Extract" icon="database" href="/json">
@@ -55,9 +55,10 @@ Complete workflows for common document processing scenarios:
   Build searchable knowledge bases from unstructured documents with intelligent classification and semantic chunking
 </Card>
 
-<Card title="Insurance Claims Processing" icon="shield-check" href="/recipes/insurance-claims">
-  Automate claims intake and data extraction from insurance documents with intelligent classification and structured data extraction
+<Card title="Supply Chain Document Processing" icon="package-search" href="/recipes/supply-chain">
+  Step-by-step tutorial on processing logistics documents with Cardinal for perfect text extraction and custom LLM prompts for intelligent data parsing
 </Card>
+
 <Card title="Healthcare Workflows" icon="heart-pulse" href="/recipes/json-extraction">
   Process medical records and clinical documentation with automated splitting, structured data extraction, and signature verification for compliance
 </Card>
