add partition docs

--- a/index.mdx
+++ b/index.mdx
@@ -9,13 +9,13 @@ description: "Transform any document into structured data"
 Cardinal's core API endpoints for document processing and data extraction:
 
 <CardGroup cols={3}>
-  <Card title="Partition" icon="scissors" href="/classify-split">
+  <Card title="Partition" icon="scissors" href="/partition">
     Partition documents into custom sections and separate multi-page files
   </Card>
-  <Card title="Schema Extract" icon="database" href="/json">
+  <Card title="Schema Extract" icon="database" href="/schema">
     Extract structured data using custom schemas with precise field mapping
   </Card>
-  <Card title="Parse" icon="file-code" href="/markdown">
+  <Card title="Parse" icon="file-code" href="/parse">
     Convert documents to clean markdown while preserving structure
   </Card>
   <Card title="Bounding Box" icon="square" href="/bounding-boxes">
