--- a/authentication/index.mdx
+++ b/authentication/index.mdx
@@ -10,7 +10,7 @@ Every request must include your API key or it will be rejected.
 
 ## Obtaining an API Key
 
-1. Log into the [Cardinal Home Page](https://dashboard.cardinal.ai/home)  
+1. Log into the [Cardinal Home Page](https://dashboard.trycardinal.ai/home)  
 2. Create a new API key or copy an existing one  
 
 **Important**: Keep your API keys secure. Do not share them publicly, and rotate them regularly. If a key is compromised, revoke it immediately from the dashboard.
